--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/html": "^2.1.2",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
