--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@material-tailwind/html": "^2.1.2",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "react": "^18",
@@ -18,6 +20,7 @@
     "taos": "^1.0.5"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
